# clustbench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
configs/: benchmark.all_algos.factorial.expanded.yaml  benchmark.all_algos.factorial.yaml  benchmark.all_algos.recorded.yaml  benchmark.chameleon.factorial_backfill.yaml  benchmark.dashboard.yaml  benchmark.full.yaml  benchmark.holdout.yaml  benchmark.large_chameleon.yaml  benchmark.mri_fmm_lmm_backfill.yaml  benchmark.nonconvex_dashboard.yaml  benchmark.paper.big.yaml  benchmark.paper.demo.yaml  benchmark.paper.local.yaml  benchmark.paper.yaml  benchmark.sample.yaml  benchmark.scaling.yaml  benchmark.text_classification.yaml  benchmark.unseen.yaml
docs/: ALGORITHM_ANALYSIS.md  DATA_MODEL.md  METHODOLOGY.md  README.md  SCHEMA.md  index.html
docs/data/: manifest.json  results.json  summary.json  trajectories.json
docs/data_unseen/: manifest.json  results.json  summary.json  trajectories.json
docs/reports/: gaps_report.json  mutator_report.json
notebooks/: clustbench_test.ipynb  default_clustering.ipynb
scripts/: annotate_predictions.py  append_run_to_dashboard.py  bench_amm_noise.py  bench_cfc.py  bench_cfc_longhorizon.py  bench_fmm_reg.py  bench_lmm_ablation.py  bench_mwc_ensembles.py  build_site.py  export_by_algo.py  find_gaps.py  mutate_algorithms.py  report_summary.py
src/clustbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_algorithms.py  test_benchmark.py  test_datasets_metrics.py  test_firebase_storage.py  test_smoke.py
(+65 files in other folders)
