[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clustbench"
version = "0.1.0"
description = "Language-agnostic clustering benchmark suite"
authors = [{name="Ashail Maharaj"}]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "psutil>=5.9",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "pyarrow>=14.0"
]

[project.scripts]
clustbench = "clustbench.cli.run:main"

[tool.setuptools.packages.find]
where = ["src"]
